# BakerAsrLinux

./: CMakeLists.txt  README.md  demo.cpp  demo_client_listener.h  use-case.txt
doc/: 语音识别服务Linux SDK使用说明文档1.0.docx
include/: asr_manager.h  base64.h  client_listener.h  websocket_wrapper.h
